--- a/main.css
+++ b/main.css
@@ -20,6 +20,45 @@ body {
   margin: 0;
 }
 
+
+
+
+/* Navigation Bar Across Top */
+.navBar {
+    display: flex; 
+    /*flex-flow: row wrap; */
+ justify-content: space-around; 
+    background-color: #3a4a58;
+    min-height: 10px;
+    color: #111;
+   /* position: fixed; */
+    position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 97%; /* Full width */
+}
+
+nav a {
+    text-decoration: none;
+    color:  #C4CDD6;
+    font-size: 35px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+    color: rgb(82, 185, 226);
+}
+
+nav ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+nav li {
+    display: inline;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
 .mm-container {
   max-width: 640px;
   margin-left: auto;
@@ -192,7 +231,13 @@ a { transition: all 0.3s ease; }
 
 .mm-footer-link:hover { color: #c5ced8; }
 
+
+
 @media (max-width: 550px) {
+    .navBar {
+        position: fixed;
+        width: 94%;
+    }
   .mm-special-item {
     padding-left: 10px;
     padding-right: 10px;
@@ -205,6 +250,10 @@ a { transition: all 0.3s ease; }
 }
 
 @media (max-width: 480px) {
+    .navBar {
+        position: fixed;
+        width: 94%;
+    }
   .mm-special-item {
     padding-left: 5px;
     padding-right: 5px;
@@ -219,6 +268,20 @@ a { transition: all 0.3s ease; }
 @media (max-width: 430px) {
   /*.mm-responsive-table { overflow-x: auto; }
   table { width: auto; }*/
+    
+    .navBar {
+        position: fixed;
+        width: 94%;
+    }
+  nav ul {
+    list-style: none;
+    padding-left: 0;
+        text-align: center;
+   }
+
+  nav a {
+    font-size: 15px;
+}
   .mm-special-items { flex-direction: column; }
   .mm-special-item { margin-bottom: 40px; }
   figcaption p {
